--- a/assets/css/rtl-style.css
+++ b/assets/css/rtl-style.css
@@ -243,7 +243,7 @@ caption, p.caption, .table-caption, .figure-caption {
 
 .nav-footer-right {
     flex: 1 1 0px;
-    text-align: right;
+    text-align: left;
 }
 /* .book summary ------------------------------------------------*/
 .book .book-header, .book .book-summary {
